<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:src="@drawable/doctor_datos" />

    <EditText
        android:id="@+id/doctorName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="30"
        android:hint="@string/name"
        android:layout_marginLeft="@dimen/leftMarginFormBaby"
            android:layout_marginRight="@dimen/rigthMarginFormBaby"
            android:layout_marginTop="@dimen/topMarginForm" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/doctorLastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="30"
        android:hint="@string/lastname" 
        android:layout_marginLeft="@dimen/leftMarginFormBaby"
            android:layout_marginRight="@dimen/rigthMarginFormBaby"
            android:layout_marginTop="@dimen/topMarginForm" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/doctorCellNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cellNumber" 
        android:inputType="number" 
        android:layout_marginLeft="@dimen/leftMarginFormBaby"
            android:layout_marginRight="@dimen/rigthMarginFormBaby"
            android:layout_marginTop="@dimen/topMarginForm" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/doctorOfficeNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/officeNumber"
        android:inputType="number" 
        android:layout_marginLeft="@dimen/leftMarginFormBaby"
            android:layout_marginRight="@dimen/rigthMarginFormBaby"
            android:layout_marginTop="@dimen/topMarginForm" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/doctorEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="30"
        android:hint="@string/email"
        android:inputType="textEmailAddress" 
        android:layout_marginLeft="@dimen/leftMarginFormBaby"
            android:layout_marginRight="@dimen/rigthMarginFormBaby"
            android:layout_marginTop="@dimen/topMarginForm" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/doctorAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="40"
        android:hint="@string/address" 
        android:layout_marginLeft="@dimen/leftMarginFormBaby"
            android:layout_marginRight="@dimen/rigthMarginFormBaby"
            android:layout_marginTop="@dimen/topMarginForm" >

        <requestFocus />
    </EditText>


</LinearLayout>